# Kalkulaator

./: .gitignore  CMakeLists.txt  Makefile  README.md  calculator.cpp  calculator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h
